--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -15,6 +15,9 @@ jobs:
       with:
         ref: main
 
+    - name: Cleanup
+      uses: rokibhasansagar/slimhub_actions@main
+
     - name: build job
       env:
         HOST: ${{ secrets.HOST }}
